# Emperator

./: .dockerignore  .gitignore  .lychee.toml  .npmrc  .pre-commit-config.yaml  .prettierignore  .yamllint  404.html  AGENTS.md  BUG_HUNT_REPORT.md  Emperator_1.md  Emperator_Master.md  IMPLEMENT_THEN_DELETE.md  Next_Steps.md  README.md  SPRINT_4_IMPLEMENTATION_SUMMARY.md  biome.json  devcontainer.json  directory_structure.md  eslint.config.js  index.html  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: apple-cruft-shield.yml  ci.yaml  docs-ci.yml
compose/: compose.ci.yaml  compose.dev.yaml  compose.yaml
contract/: exemptions.yaml
contract/api/: platform.v1.yaml
contract/conventions/: README.md  naming.cue
contract/policy/: README.md  policy.rego
contract/rules/: catalog.yaml
docs/: .lychee.toml  .pre-commit-config.yaml  cli.md  index.md  mkdocs.yml
docs/adr/: 0000-template.md  0001-adopt-adr-process.md  0002-code-hardening-and-telemetry.md  0003-analyzer-telemetry-architecture.md  0004-ir-builder-architecture.md  0005-safety-envelope-design.md  README.md
docs/assets/js/: mermaid-theme.js
docs/assets/styles/: extra.css
docs/explanation/: ai-orchestration.md  developer-experience.md  devsecops-supply-chain.md  executive-summary.md  implementation-roadmap.md  ir-architecture.md  security-safety.md  sprint-4-ir-analysis.md  sprint-5-safety-envelope.md  sprint-foundations-summary.md  system-architecture.md
docs/how-to/: ai-assisted-refactors.md  author-contract.md  ci-integration.md  develop-codeql-queries.md  use-ir-cache.md
docs/includes/: copilot-prompts.md
docs/reference/: contract-spec.md  developer-tooling.md  governance.md  ir-format.md  linting-formatting.md  toolchain.md
docs/tutorial/: getting-started.md
emperator/: Dockerfile  README.md
emperator/.github/workflows/: ci.yaml
emperator/compose/: compose.yaml
emperator/contract/: README.md
emperator/contract/api/: README.md  platform.v1.yaml
emperator/docs/: index.md
emperator/tests/: README.md  test_cli.py  test_scaffolding.py
emperator/tools/: README.md
emperator_specs/: .gitignore  .markdownlint.jsonc  Emperator_Master.md  Project_Plan.md  Sprint_Playbook.md  mkdocs.yml
emperator_specs/site/: 404.html  index.html  sitemap.xml
env/: README.md  ci.env.example  dev.env.example  prod.env.example
explanation/ai-orchestration/: index.html
explanation/developer-experience/: index.html
explanation/devsecops-supply-chain/: index.html
explanation/executive-summary/: index.html
explanation/implementation-roadmap/: index.html
how-to/author-contract/: index.html
how-to/ci-integration/: index.html
includes/copilot-prompts/: index.html
infra/: README.md
reference/governance/: index.html
rules/: README.md
rules/codeql/: README.md  qlpack.yml
rules/semgrep/: README.md  ruleset.yaml
scripts/: ban-apple-cruft.sh  cache-prune.sh  cleanup-macos-cruft.sh  format-yaml.mjs  lint-changed.mjs  lint-staged.sh  run-format.mjs  run-lint-sarif.mjs  run-pip-audit.sh  setup-linting.sh  setup-tooling.sh  sync-environments.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/js/: bootstrap.bundle.min.js
site/search/: search_index.json
src/: README.md
src/emperator/: __init__.py  analysis.py  api.py  cli.py  contract.py  contract_rules.py  doctor.py  scaffolding.py
tests/: test_analysis.py  test_api_contract.py  test_cli.py  test_codeql.py  test_contract_module.py  test_correlation.py  test_doctor.py  test_formatting.py  test_ir.py  test_linting.py  test_rules.py  test_scaffolding.py
tutorial/getting-started/: index.html
(+72 files in other folders)
