[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emperator"
version = "0.1.0"
description = "Canonical implementation scaffold for the Emperator platform."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Emperator Contributors" }
]
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi ~= 0.119",
  "uvicorn[standard] ~= 0.37",
  "pyyaml ~= 6.0",
  "typer ~= 0.19",
  "rich ~= 14.0",
  "shellingham ~= 1.5",
]

[project.optional-dependencies]
dev = [
  "pytest ~= 8.4",
  "pytest-cov ~= 7.0",
  "ruff ~= 0.7.0",
  "mypy ~= 1.18",
  "httpx ~= 0.28",
  "pre-commit ~= 4.0",
]

[tool.setuptools]
package-dir = { "" = "emperator/src" }

[tool.setuptools.packages.find]
where = ["emperator/src"]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
extend-exclude = [
  "emperator_specs/site",
  "site",
  "node_modules",
  ".venv",
  ".mypy_cache",
  ".ruff_cache",
  ".pytest_cache",
  "**/._*",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C90"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "-q -ra --strict-markers"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true

[project.scripts]
emperator = "emperator.cli:run"
